# newsletter-knowledge-base-public

./: .env.example  .gitignore  README.md  main.py  newsletter-ai-pipeline-design-v1.md  pyproject.toml  requirements.txt  topics_index.json
dashboard/: index.html  ingest.html  link_review.html  progress.html  research_queue.html
pipeline/: config.example.py  db.py  link_orchestrator.py  links.csv.sample  orchestrator.py  progress_writer.py  relink_notes.py  reorder_index.py  serve_dashboard.py
pipeline/agents/: classification.py  git_backup.py  gmail_label.py  image_extraction.py  ingestion.py  link_ingestion.py  local_writer.py  logging_agent.py  research.py  summarisation.py  topic_linking.py
pipeline/dashboard/: generate_dashboard.py  generate_link_review.py  generate_research_queue.py
pipeline/fixes/: cleanup_duplicate_images.py  diagnose_topic_index.py  fix_asset_links.py  retag_existing_notes.py  retrofit_related_notes.py
