[project]
name = "newsletter-knowledge-base-private"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic==0.107.1",
    "anyio==4.13.0",
    "beautifulsoup4==4.15.0",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "colorama==0.4.6",
    "cryptography==48.0.0",
    "distro==1.9.0",
    "docstring-parser==0.18.0",
    "filelock==3.29.1",
    "fsspec==2026.4.0",
    "google-api-core==2.31.0",
    "google-api-python-client==2.197.0",
    "google-auth==2.53.0",
    "google-auth-httplib2==0.4.0",
    "google-auth-oauthlib==1.4.0",
    "googleapis-common-protos==1.75.0",
    "greenlet==3.5.2",
    "h11==0.16.0",
    "hf-xet==1.5.0",
    "httpcore==1.0.9",
    "httplib2==0.31.2",
    "httpx==0.28.1",
    "huggingface-hub==1.18.0",
    "idna==3.18",
    "jinja2==3.1.6",
    "jiter==0.15.0",
    "joblib==1.5.3",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "narwhals==2.22.1",
    "networkx==3.6.1",
    "numpy==2.4.6",
    "oauthlib==3.3.1",
    "packaging==26.2",
    "pillow==12.2.0",
    "playwright==1.60.0",
    "proto-plus==1.28.0",
    "protobuf==7.35.0",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pyee==13.0.1",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.34.2",
    "requests-oauthlib==2.0.0",
    "rich==15.0.0",
    "safetensors==0.7.0",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "sentence-transformers==5.5.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "soupsieve==2.8.4",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.12.0",
    "tqdm==4.68.1",
    "transformers==5.10.2",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uritemplate==4.2.0",
    "urllib3==2.7.0",
]
